Fix for contact icons on mobile devices

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -16,3 +16,7 @@
 .bg-darker {
 	background: #fafafa
 }
+
+.list-inline li {
+	padding-bottom: 20px
+}
